# TTLxRL

./: .gitignore  README.md  build-desktop-app.bat  dev.js  electron-best-practices.md  gift_browse_button_plan.md  gift_mapper  gift_menu_improvement_implementation_summary.md  gift_menu_improvement_plan.md  gift_real_icons_migration_plan.md  gift_stacking_plan.md  installer_plan.md  like_count_plan.md  live_feed_aggregation_plan.md  macro_sequence_plan.md  package-lock.json  package.json  run_first.bat  site_design.md  start_ttlrl.bat  start_ttlrl_fix_plan.md  stream_overlay_and_photo_mapping_plan.md  tiktok_macro_project_plan.md  windows_build_steps.md
backend/: .env  index.js  package.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/electron/: README.md  main.js  package-lock.json  package.json  preload.js
frontend/public/: gifts.json
frontend/src/: App.jsx  index.css  main.jsx  ws.ts
frontend/src/components/: CompactTargetWindow.jsx  (+20 more)
photos/: _profiles.json
photos/rocket_league/: photo-map.json
plugin/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  Plugin-Overview-Plan.md  README.md  build_plugin.bat  build_plugin.ps1
plugin/bakkesmodsdk/BakkesModSDK-master/include/bakkesmod/wrappers/: PlayerControllerWrapper.h
plugin/bakkesmodsdk/BakkesModSDK-master/include/bakkesmod/wrappers/GameObject/: PriWrapper.h
plugin/example_desktop_app/: README.md  package-lock.json  package.json  server.js
plugin/src/: GameStateDetector.cpp  GameStateDetector.h  GameStatePlugin.cpp  GameStatePlugin.h  WebSocketClient.cpp  WebSocketClient.h
(+6 files in other folders)
